Deteccion de root mejorada